# Connect-4-AI

./: Cargo.toml  README.md  log.md
benches/: eval.rs
src/: game.rs  game_logic.rs  lib.rs  main.rs
