[package]
name = "four-in-a-row"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0.8.4"
rulinalg = "0.4.2"
strum = "0.24.1"
strum_macros = "0.24.3"
cpu-time = "1.0.0"
num-integer = "0.1.45"
rand_chacha = "0.3.1"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "eval"
harness = false